--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4"
+        "phpunit/phpunit": "^7.4",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "license": "MIT",
     "authors": [
